MNMS-328 feat:gateway 디버깅

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,7 +18,7 @@ spring:
         - id: local-service
           uri: http://localhost:10003
           predicates:
-            - Path=/api/**
+            - Path=/
 jwt:
   private-pem-path: classpath:keys/private.pem
   public-pem-path: classpath:keys/public.pem
