--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation "org.springframework.cloud:spring-cloud-starter-gateway-server-webflux"
 	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
