--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,11 +14,36 @@ spring:
           - payment
           - user
     gateway:
-      routes:
-        - id: local-service
-          uri: http://localhost:10003
-          predicates:
-            - Path=/**
+      server:
+        webflux:
+          routes:
+            - id: user-service
+              uri: http://localhost:8080
+              predicates:
+                - Path=/user/**
+              filters:
+                - StripPrefix=1
+                -
+            - id: booking-service
+              uri: http://localhost:8081
+              predicates:
+                - Path=/booking/**
+              filters:
+                - StripPrefix=1
+                -
+            - id: festival-service
+              uri: http://localhost:8082
+              predicates:
+                - Path=/festival/**
+              filters:
+                - StripPrefix=1
+            - id: payment-service
+              uri: http://localhost:8083
+              predicates:
+                - Path=/payment/**
+              filters:
+                - StripPrefix=1
+
 jwt:
   private-pem-path: classpath:keys/private.pem
   public-pem-path: classpath:keys/public.pem
