--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: api-gateway
@@ -15,25 +18,24 @@ spring:
     gateway:
       default-filters:
         - StripPrefix=1
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-          predicates:
-            - name: Path
-              args:
-                pattern: "'/' + serviceId + '/**'"
-          filters:
-            - name: StripPrefix
-              args:
-                parts: 1
+      server:
+        webflux:
+          discovery:
+            locator:
+              enabled: true
+              lower-case-service-id: true
+              predicates:
+                - name: Path
+                  args:
+                    pattern: "'/' + serviceId + '/**'"
+              filters:
+                - name: StripPrefix
+                  args:
+                    parts: 1
 
 jwt:
   private-pem-path: classpath:keys/private.pem
   public-pem-path: classpath:keys/public.pem
-
-server:
-  port: 8080
 
 management:
   endpoints:
