--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,24 +5,35 @@ spring:
   application:
     name: api-gateway
   cloud:
-    kubernetes:
-      discovery:
-        enabled: true
-        namespaces:
-          - booking
-          - festival
-          - payment
-          - user
     gateway:
-      routes:
-        - id: local-service
-          uri: http://localhost:10003
-          predicates:
-            - Path=/**
+      server:
+        webflux:
+          # 각 MSA 서비스 라우팅을 위한 설정. uri 가 어떻게 이루어져있는지 파악되지 않아서 predicates ** 처리
+          routes:
+            - id: local-service1
+              uri: http://localhost:8080
+              predicates:
+                - Path=/**
+            - id: local-service2
+              uri: http://localhost:8081
+              predicates:
+                - Path=/**
+            - id: local-service3
+              uri: http://localhost:8082
+              predicates:
+                - Path=/**
+            - id: local-service4
+              uri: http://localhost:8083
+              predicates:
+                - Path=/**
 jwt:
   private-pem-path: classpath:keys/private.pem
   public-pem-path: classpath:keys/public.pem
 
+
+# cors url 설정
+cors:
+  url: http://localhost:5173
 
 
 management:
