ㅡMNMS-386 feat: Gateway Swagger Aggregator 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-json'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 
-
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.9'
 }
 dependencyManagement {
 	imports {
