--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -69,10 +69,10 @@ springdoc:
         url: /user/v3/api-docs
 
       - name: Payment
-        url: http://localhost:8081/api/v3/api-docs
+        url: /payment/v3/api-docs
 
       - name: Booking
         url: /booking/v3/api-docs
 
       - name: Festival
-        url: http://localhost:8083/api/v3/api-docs
+        url: /festival/v3/api-docs
