--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -20,21 +20,60 @@ spring:
     gateway:
       server:
         webflux:
-          # Kubernetes Routing 을 위한 규칙 설정
-          discovery:
-            locator:
-              enabled: true
-              lower-case-service-id: true
-              # serviceID 를 기점으로 자동 라우팅
+          routes:
+            - id: user
+              uri: http://api-user-service:8080
               predicates:
-                - name: Path
-                  args:
-                    pattern: "'/' + serviceId + '/**'"
-              # 첫 uri 없이 전달
+                - Path=/api/user/**
+
+            - id: user-swagger
+              uri: http://api-user-service:8080
+              predicates:
+                - Path=/api/user/v3/api-docs
               filters:
-                - name: StripPrefix
-                  args:
-                    parts: 1
+                - StripPrefix=2
+              order: -1
+
+
+            - id: payment
+              uri: http://api-payment-service:8080
+              predicates:
+                - Path=/api/payment/**
+
+            - id: payment-swagger
+              uri: http://api-payment-service:8080
+              predicates:
+                - Path=/api/payment/v3/api-docs
+              filters:
+                - StripPrefix=2
+              order: -1
+
+
+            - id: booking
+              uri: http://api-booking-service:8080
+              predicates:
+                - Path=/api/booking/**
+
+            - id: booking-swagger
+              uri: http://api-booking-service:8080
+              predicates:
+                - Path=/api/booking/v3/api-docs
+              filters:
+                - StripPrefix=2
+              order: -1
+
+            - id: festival
+              uri: http://api-festival-service:8080
+              predicates:
+                - Path=/api/festival/**
+
+            - id: festival-swagger
+              uri: http://api-festival-service:8080
+              predicates:
+                - Path=/api/festival/v3/api-docs
+              filters:
+                - StripPrefix=2
+              order: -1
 
 
 # JWT key 세팅
@@ -71,10 +110,13 @@ springdoc:
   swagger-ui:
     urls:
       - name: User
-        url: /api-user-service/v3/api-docs
+        url: /api/user/v3/api-docs
+
       - name: Payment
-        url: /api-payment-service/v3/api-docs
+        url: /api/payment/v3/api-docs
+
       - name: Booking
-        url: /api-booking-service/v3/api-docs
+        url: /api/booking/v3/api-docs
+
       - name: Festival
-        url: /api-festival-service/v3/api-docs
+        url: /api/festival/v3/api-docs
