MNMS-504 feat: ãlcors 여려ê개 설정

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -84,7 +84,11 @@ jwt:
 
 # cors url 설정
 cors:
-  url: http://localhost:5173
+  url:
+    - http://localhost:5173
+    - http://127.0.0.1:5173
+    - http://localhost:5174
+    - http://127.0.0.1:5174
 
 
 # actuator 노출 범위, 조건
