--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -34,7 +34,7 @@ spring:
             - id: booking
               uri: http://booking:8082
               predicates:
-                - Path=/api/booking/**,/api/qr/**,/api/host/**,/api/captcha/**
+                - Path=/api/booking/**,/api/qr/**,/api/host/**,/api/captcha/**,/api/transfer/**,/api/ticket/**,/api/statistics/**,/ws/**
             - id: booking-swagger
               uri: http://booking:8082
               predicates:
