fix: 이름 깨짐 문제 수정

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -24,7 +24,7 @@ spring:
             - id: user
               uri: http://api-user-service.user.svc.cluster.local:8080
               predicates:
-                - Path=/api/user/**,/api/addresses/**,/api/admin/**,/api/users/**,/api/mail/**,/api/auth/**,/api/mypage/**
+                - Path=/api/user/**,/api/addresses/**,/api/admin/**,/api/users/**,/api/mail/**,/api/auth/**,/api/myPage/**
 
             - id: user-swagger
               uri: http://api-user-service.user.svc.cluster.local:8080
