--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -10,7 +10,7 @@ spring:
             - id: user
               uri: http://user:8080
               predicates:
-                - Path=/api/user/**,/api/addresses/**,/api/admin/**,/api/users/**,/api/mail/**,/api/auth/**,/api/mypage/**
+                - Path=/api/user/**,/api/addresses/**,/api/admin/**,/api/users/**,/api/mail/**,/api/auth/**,/api/myPage/**
             - id: user-swagger
               uri: http://user:8080
               predicates:
