chore: application-docker.yml observation enabled 추가

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -9,6 +9,8 @@ spring:
       # ★ Gateway 메트릭 활성화
       metrics:
         enabled: true
+      observation:
+        enabled: true
       server:
         webflux:
           # ★ WebFlux 메트릭 활성화
